<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">crimebusters</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Crimebusters!</string>
    <string name="user_name">User Name</string>
    <string name="user_password">User Password</string>
    <string name="button_login">Log In</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="create_report">Click here to create report</string>
    <string name="update_profile">Click here to update profile</string>
    <string name="button_createReport">Create Report</string>
    <string name="button_updateProfile">Update Profile</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_profile">Profile</string>
    <string name="high_priority">Click the below button if the crime is occurring currently</string>
    <string name="low_priority">Click the below button if the crime has already occurred</string>
    <string name="button_highPriority">High Priority Report</string>
    <string name="button_lowPriority">Low Priority Report</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="button_saveChanges">Save Changes</string>
    <string name="title_activity_high_priority_report">HighPriorityReport</string>
    <string name="title_activity_low_priority_report">LowPriorityReport</string>
    <string name="crime_desc">Crime Description</string>
    <string name="location_desc">Location Description</string>
    <string name="locationX">Location X co-ordinate</string>
    <string name="locationY">Location Y co-ordinate</string>
    <string name="button_submitHighPriorityReport">Submit Report</string>
    <string name="button_submitLowPriorityReport">Submit Report</string>
    <string name="click_pictures">Click here to take pictures</string>
    <string name="button_clickPictures">Click Pictures</string>
    <string name="create_audio">Click here to capture audio</string>
    <string name="button_createAudio">Capture Audio</string>
    <string name="create_video">Click here to capture video</string>
    <string name="button_createVideo">Capture Video</string>

</resources>
