<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.crimebusters.Profile$PlaceholderFragment" >

     <EditText
         android:id="@+id/first_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="30dp"
         android:hint="@string/first_name"
         android:textSize="24sp"
         android:textStyle="bold" />
     
      <EditText
          android:id="@+id/last_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="20dp"
          android:hint="@string/last_name"
          android:textSize="24sp"
          android:textStyle="bold" />
      
      <EditText
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="20dp"
          android:hint="@string/email"
          android:textSize="24sp"
          android:textStyle="bold" />
      
      <EditText
          android:id="@+id/phone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="20dp"
          android:hint="@string/phone"
          android:textSize="24sp"
          android:textStyle="bold" />
      
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:textSize="24sp"
           android:background="@drawable/gradient"
           android:layout_marginTop="30dp"
           android:onClick="saveChanges"
           android:text="@string/button_saveChanges" />
    
</LinearLayout>
