<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.crimebusters.Report$PlaceholderFragment" >

    <TextView
        android:id="@+id/high_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp"
        android:hint="@string/high_priority"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:onClick="createHighPriorityReport"
        android:background="@drawable/gradient"
        android:text="@string/button_highPriority"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/low_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:hint="@string/low_priority" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@drawable/gradient"
        android:onClick="createLowPriorityReport"
        android:text="@string/button_lowPriority" />

</LinearLayout>