<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.crimebusters.DisplayMessageActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"
        android:src="@drawable/page2" />
    
    <TextView
        android:id="@+id/create_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="23sp"
        android:textStyle="bold"
        android:hint="@string/create_report" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="createReport"
        android:textStyle="bold"
        android:textSize="24sp"
        android:background="@drawable/gradient"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/button_createReport" />

    <TextView
        android:id="@+id/update_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="23sp"
        android:textStyle="bold"
        android:hint="@string/update_profile" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="updateProfile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@drawable/gradient"
        android:layout_marginTop="10dp"
        android:text="@string/button_updateProfile" />

</LinearLayout>