<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:adjustViewBounds="true"
    android:orientation="vertical"
	android:background="@drawable/gradient_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scaleType="fitXY"
    tools:context="com.example.crimebusters.MainActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/textView1"
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"
        android:src="@drawable/image" />

    <ImageView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.01"
        android:scaleType="centerInside"
        android:src="@drawable/welcome" />

    <!-- <EditText -->
    <!-- android:id="@+id/welcome" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:hint="@string/welcome" /> -->

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:hint="@string/user_name" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:hint="@string/user_password" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:onClick="login" 
        android:background="@drawable/gradient"
        android:text="@string/button_login" />

</LinearLayout>